// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationCardErrorScreen renders CardExpired variant correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      [
        false,
        {
          "gap": 16,
          "padding": 24,
        },
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            undefined,
          ]
        }
      >
        BCSC.VerificationCardError.CardExpired.Heading
      </Text>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        BCSC.VerificationCardError.CardExpired.Description
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "gap": 16,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "flexGrow": 1,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": 0,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": -3,
              "width": 0,
            },
            "shadowOpacity": 0.9,
            "shadowRadius": 3,
            "top": 0,
            "zIndex": -1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#F2F2F2",
              "height": 1,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#F2F2F2",
            "flexGrow": 1,
            "gap": 8,
            "padding": 24,
          }
        }
      >
        <View
          accessibilityHint="Global.A11y.OpensInBrowser"
          accessibilityLabel="BCSC.VerificationCardError.CardExpired.ButtonText"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#003366",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/GetBCSC"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                    false,
                  ],
                ]
              }
            >
              BCSC.VerificationCardError.CardExpired.ButtonText
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`VerificationCardErrorScreen renders MismatchedSerial variant correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F2F2F2",
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      [
        false,
        {
          "gap": 16,
          "padding": 24,
        },
      ]
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 26,
              "fontWeight": "bold",
            },
            undefined,
          ]
        }
      >
        BCSC.MismatchedSerial.Heading
      </Text>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        BCSC.MismatchedSerial.Description1
      </Text>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.MismatchedSerial.SerialNumber
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.MismatchedSerial.Birthdate
        </Text>
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        BCSC.MismatchedSerial.Description2
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "gap": 16,
        },
        false,
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "flexGrow": 1,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "left": 0,
            "position": "absolute",
            "right": 0,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": -3,
              "width": 0,
            },
            "shadowOpacity": 0.9,
            "shadowRadius": 3,
            "top": 0,
            "zIndex": -1,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#F2F2F2",
              "height": 1,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#F2F2F2",
            "flexGrow": 1,
            "gap": 8,
            "padding": 24,
          }
        }
      >
        <View
          accessibilityLabel="BCSC.MismatchedSerial.TryAnotherCard"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#003366",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/TryAnother"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                    false,
                  ],
                ]
              }
            >
              BCSC.MismatchedSerial.TryAnotherCard
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
